--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,3 +2,19 @@ body{
   font-family: helvetica;
   text-align: center;
 }
+h1{
+  font-size: 70px;
+  font-weight: bold;
+  color: white;
+}
+h2{
+  font-size: 32px;
+  font-weight: bold;
+}
+h3{
+  font-size: 23px;
+  font-weight: bold;
+}
+p{
+  font-size: 14px;
+}
