--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,7 +5,6 @@ body{
 h1{
   font-size: 70px;
   font-weight: bold;
-  color: white;
 }
 h2{
   font-size: 32px;
@@ -17,4 +16,18 @@ h3{
 }
 p{
   font-size: 14px;
+}
+.menu{
+  color: white;
+  font-size: 18px;
+}
+.backgroundrow{
+  color: white;
+  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+}
+.footer{
+  font-size: 11px;
+  color: white;
+  background-color: dimgray;
+  text-align: left;
 }
